Fix alignment

--- a/cv.css
+++ b/cv.css
@@ -100,7 +100,6 @@ p {
 	opacity: 0.5;
 	color: inherit;
 	float: right;
-	margin-right: 0.5em;
 	clear: right;
 }
 
